--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "main": "pages/index.js",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.1.4",
-    "babel-preset-stage-0": "^6.24.1",
-    "next": "^3.0.0-beta6",
-    "styled-components": "^2.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "express": "^4.14.0",
-    "react-twitter-widgets": "^1.3.0"
+    "next": "^3.0.0-beta13",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0"
   },
-  "repository": "https://github.com/mcansh/mcan.sh",
-  "homepage": "https://mcansh",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0"
+  },
+  "repository": "https://github.com/mcansh/mcan.sh-nextjs",
+  "homepage": "https://loganmcansh.com",
   "author": {
     "name": "Logan McAnsh",
     "email": "logan@mcan.sh",
