--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "next": "^4.3.0-canary.1",
     "prop-types": "^15.5.10",
+    "raven-js": "^3.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
