dont join the map

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.1",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "export": "next export",
+    "build": "next build && next export",
     "start": "NODE_ENV=production node -r @std/esm server"
   },
   "dependencies": {
