--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-inline-dotenv": "^1.1.2",
     "express": "^4.16.2",
     "next": "^4.3.0-canary.1",
+    "object-fit-images": "^3.2.3",
     "prop-types": "^15.5.10",
     "raven-js": "^3.21.0",
     "react": "^16.2.0",
