--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["inline-dotenv"]
+  "plugins": ["inline-dotenv", ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]]
 }
