--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@std/esm": "^0.19.1",
     "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-styled-components": "^1.5.0",
     "express": "^4.16.2",
     "next": "^4.3.0-canary.1",
     "object-fit-images": "^3.2.3",
@@ -17,6 +18,7 @@
     "raven-js": "^3.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "^0.11.4",
     "webpack": "^3.10.0"
   },
