--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "NODE_ENV=production node -r @std/esm server"
   },
   "dependencies": {
-    "@std/esm": "^0.19.1",
+    "@std/esm": "^0.20.0",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "express": "^4.16.2",
-    "next": "^4.3.0-canary.1",
+    "next": "^5.0.0",
     "object-fit-images": "^3.2.3",
     "prop-types": "^15.5.10",
     "raven-js": "^3.21.0",
@@ -22,13 +22,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
+    "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "latest",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.5.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.6.1",
     "prettier": "^1.9.2"
   },
   "repository": "https://github.com/mcansh/mcan.sh-nextjs",
