--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mcansh",
   "description": "personal website",
   "version": "1.0.4",
+  "repository": "https://github.com/mcansh/mcan.sh",
+  "homepage": "https://mcan.sh",
+  "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
+  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build && next export && cp .next/sw.js ./out",
@@ -31,10 +35,6 @@
     "eslint-plugin-react": "^7.6.1",
     "prettier": "^1.9.2"
   },
-  "repository": "https://github.com/mcansh/mcan.sh-nextjs",
-  "homepage": "https://mcan.sh",
-  "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
-  "license": "MIT",
   "@std/esm": {
     "esm": "js",
     "cjs": true
