--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@std/esm": "^0.21.0",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "express": "^4.16.2",
-    "next": "^5.0.0",
+    "next": "^5.0.1-canary.2",
     "object-fit-images": "^3.2.3",
     "prop-types": "^15.5.10",
-    "raven-js": "^3.21.0",
+    "raven-js": "^3.22.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
