--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "unistore": "^3.0.4",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
