--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "start": "NODE_ENV=production node -r @std/esm server"
   },
   "dependencies": {
-    "@std/esm": "^0.22.0",
-    "babel-plugin-inline-dotenv": "^1.1.2",
-    "express": "^4.16.2",
-    "next": "^5.0.1-canary.2",
-    "object-fit-images": "^3.2.3",
-    "prop-types": "^15.5.10",
-    "raven-js": "^3.22.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "unistore": "^3.0.4",
-    "webpack": "^3.10.0"
+    "@std/esm": "0.23.0",
+    "babel-plugin-inline-dotenv": "1.1.2",
+    "express": "4.16.2",
+    "next": "5.0.0",
+    "object-fit-images": "3.2.3",
+    "prop-types": "15.5.10",
+    "raven-js": "3.22.3",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "unistore": "3.0.4",
+    "webpack": "4.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb": "^16.1.0",
+    "babel-eslint": "8.2.2",
+    "eslint": "4.18.1",
+    "eslint-config-airbnb": "16.1.0",
     "eslint-config-prettier": "latest",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "prettier": "^1.9.2"
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.7.0",
+    "prettier": "1.9.2"
   },
   "@std/esm": {
     "esm": "js",
