--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
   },
   "dependencies": {
     "babel-plugin-inline-dotenv": "1.1.2",
-    "esm": "3.0.7",
+    "esm": "3.0.16",
     "imagemin": "5.3.1",
     "imagemin-mozjpeg": "7.0.0",
     "imagemin-pngquant": "5.1.0",
     "imagemin-webp": "4.1.0",
-    "next": "5.0.0",
+    "next": "6.0.0-canary.3",
     "object-fit-images": "3.2.3",
     "prop-types": "15.6.1",
-    "raven-js": "3.23.3",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "raven-js": "3.24.0",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
     "sw-precache-webpack-plugin": "0.11.5",
     "unistore": "3.0.4",
-    "webpack": "4.2.0"
+    "webpack": "4.5.0"
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-config-mcansh": "1.0.3",
+    "eslint-config-mcansh": "1.0.4",
     "eslint-config-prettier": "latest",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
