--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "imagemin-pngquant": "5.1.0",
     "imagemin-webp": "4.1.0",
     "is-absolute-url": "2.1.0",
-    "next": "6.0.0-canary.4",
+    "next": "6.0.0",
     "object-fit-images": "3.2.3",
     "prop-types": "15.6.1",
     "raven-js": "3.24.2",
@@ -35,7 +35,7 @@
     "babel-eslint": "8.2.3",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-config-mcansh": "1.0.4",
+    "eslint-config-mcansh": "1.0.5",
     "eslint-config-prettier": "latest",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
