--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mcansh",
   "description": "personal website",
   "version": "1.0.5",
-  "repository": "https://github.com/mcansh/mcan.sh",
+  "repository": "mcansh/mcan.sh",
   "homepage": "https://mcan.sh",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
@@ -15,32 +15,36 @@
   },
   "dependencies": {
     "babel-plugin-inline-dotenv": "1.1.2",
-    "esm": "3.0.28",
-    "imagemin": "5.3.1",
-    "imagemin-mozjpeg": "7.0.0",
-    "imagemin-pngquant": "5.1.0",
-    "imagemin-webp": "4.1.0",
+    "babel-plugin-styled-components": "1.5.1",
+    "esm": "3.0.34",
     "is-absolute-url": "2.1.0",
-    "next": "6.0.0",
+    "mime": "2.3.1",
+    "next": "6.0.3",
     "object-fit-images": "3.2.3",
     "prop-types": "15.6.1",
-    "raven-js": "3.24.2",
+    "raven-js": "3.25.2",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "styled-components": "3.2.6",
+    "styled-theming": "2.2.0",
     "sw-precache-webpack-plugin": "0.11.5",
-    "unistore": "3.0.4",
-    "webpack": "4.6.0"
+    "unistore": "3.0.5",
+    "webpack": "4.8.3"
   },
   "devDependencies": {
     "babel-eslint": "8.2.3",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-config-mcansh": "1.0.5",
+    "eslint-config-mcansh": "1.0.7",
     "eslint-config-prettier": "latest",
-    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-react": "7.8.2",
+    "imagemin": "5.3.1",
+    "imagemin-mozjpeg": "7.0.0",
+    "imagemin-pngquant": "5.1.0",
+    "imagemin-webp": "4.1.0",
     "prettier": "1.12.1"
   },
   "esm": {
