--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "eslint": "5.2.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-mcansh": "1.0.7",
-    "eslint-config-prettier": "latest",
+    "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-react": "7.10.0",
-    "imagemin": "5.3.1",
+    "imagemin": "6.0.0",
     "imagemin-mozjpeg": "7.0.0",
-    "imagemin-pngquant": "5.1.0",
+    "imagemin-pngquant": "6.0.0",
     "imagemin-webp": "4.1.0",
     "prettier": "1.13.7"
   },
