--- a/package.json
+++ b/package.json
@@ -13,38 +13,43 @@
     "postbuild": "cp .next/sw.js ./out",
     "start": "next start"
   },
+  "browser": {
+    "path": "isomorphic-path"
+  },
   "dependencies": {
-    "babel-plugin-inline-dotenv": "1.1.2",
-    "babel-plugin-styled-components": "1.7.1",
-    "esm": "3.0.82",
+    "esm": "3.0.84",
     "is-absolute-url": "2.1.0",
+    "isomorphic-path": "0.0.5",
     "mime": "2.3.1",
-    "next": "6.1.2",
+    "next": "7.0.2",
     "object-fit-images": "3.2.4",
+    "polished": "2.3.0",
     "prop-types": "15.6.2",
     "raven-js": "3.27.0",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
-    "styled-components": "3.4.6",
-    "styled-theming": "2.2.0",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "styled-components": "4.0.2",
     "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.18.0"
+    "webpack": "4.23.1"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.6",
-    "eslint": "5.5.0",
+    "babel-eslint": "10.0.1",
+    "babel-plugin-inline-dotenv": "1.1.2",
+    "babel-plugin-polished": "1.1.0",
+    "babel-plugin-styled-components": "1.8.0",
+    "eslint": "5.8.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-mcansh": "1.0.7",
-    "eslint-config-prettier": "3.0.1",
+    "eslint-config-prettier": "3.1.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-prettier": "2.6.2",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "imagemin": "6.0.0",
     "imagemin-mozjpeg": "7.0.0",
     "imagemin-pngquant": "6.0.0",
     "imagemin-webp": "4.1.0",
-    "prettier": "1.14.2"
+    "prettier": "1.14.3"
   },
   "esm": {
     "mode": "auto",
