add description meta tag for seo
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcansh",
-  "description": "personal website",
+  "description": "personal website for logan mcansh",
   "version": "1.0.12",
   "repository": "mcansh/mcan.sh",
   "homepage": "https://mcan.sh",
