--- a/package.json
+++ b/package.json
@@ -27,30 +27,31 @@
     "polished": "2.3.0",
     "prop-types": "15.6.2",
     "raven-js": "3.27.0",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
-    "styled-components": "4.0.2",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "styled-components": "4.1.1",
     "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.23.1"
+    "webpack": "4.26.1"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
-    "babel-plugin-inline-dotenv": "1.1.2",
+    "babel-plugin-inline-dotenv": "1.2.0",
     "babel-plugin-polished": "1.1.0",
-    "babel-plugin-styled-components": "1.8.0",
-    "eslint": "5.8.0",
+    "babel-plugin-styled-components": "1.9.0",
+    "eslint": "5.9.0",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-mcansh": "1.0.7",
-    "eslint-config-prettier": "3.1.0",
+    "eslint-config-mcansh": "1.0.9",
+    "eslint-config-prettier": "3.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "imagemin": "6.0.0",
-    "imagemin-mozjpeg": "7.0.0",
+    "imagemin-mozjpeg": "8.0.0",
     "imagemin-pngquant": "6.0.0",
     "imagemin-webp": "4.1.0",
-    "prettier": "1.14.3"
+    "prettier": "1.15.2"
   },
   "esm": {
     "mode": "auto",
