--- a/now.json
+++ b/now.json
@@ -11,18 +11,12 @@
       "use": "@now/static-build"
     }
   ],
-  "static": {
-    "directoryListing": false,
-    "headers": [
-      {
-        "source": "**/static/**",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, max-age=31536000, immutable"
-          }
-        ]
+  "routes": [
+    {
+      "src": "**/static/**",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
       }
-    ]
-  }
+    }
+  ]
 }
