--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "prebuild": "node -r esm scripts/compress",
     "export": "next export -o dist",
     "start": "next start",
     "now-build": "yarn build && yarn export"
@@ -18,43 +17,51 @@
     "path": "isomorphic-path"
   },
   "dependencies": {
-    "esm": "3.2.5",
+    "@mdx-js/tag": "0.20.3",
+    "@sentry/browser": "4.6.4",
+    "http-status": "1.3.1",
     "is-absolute-url": "2.1.0",
     "isomorphic-path": "2.0.1",
     "mime": "2.4.0",
-    "next": "8.0.1",
+    "next": "8.0.3",
+    "next-server": "8.0.3",
     "object-fit-images": "3.2.4",
-    "polished": "3.0.0",
+    "polished": "3.0.3",
     "prop-types": "15.7.2",
     "raven-js": "3.27.0",
-    "react": "16.8.2",
-    "react-dom": "16.8.2",
-    "styled-components": "4.1.3",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.29.5"
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "styled-components": "4.1.3"
   },
   "devDependencies": {
+    "@types/is-absolute-url": "2.1.0",
+    "@types/next": "8.0.1",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.2",
+    "@types/styled-components": "4.1.12",
+    "@zeit/next-mdx": "1.2.0",
+    "@zeit/next-typescript": "1.1.1",
     "babel-eslint": "10.0.1",
     "babel-plugin-inline-dotenv": "1.2.1",
     "babel-plugin-polished": "1.1.0",
+    "babel-plugin-root-import": "6.1.0",
     "babel-plugin-styled-components": "1.10.0",
-    "eslint": "5.14.1",
+    "babel-plugin-transform-define": "1.3.1",
+    "eslint": "5.15.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-mcansh": "1.0.9",
-    "eslint-config-prettier": "4.0.0",
+    "eslint-config-mcansh": "1.1.1",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
+    "eslint-import-resolver-typescript": "1.1.1",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.12.4",
-    "imagemin": "6.1.0",
-    "imagemin-mozjpeg": "8.0.0",
-    "imagemin-pngquant": "7.0.0",
-    "imagemin-webp": "5.0.0",
-    "prettier": "1.16.4"
-  },
-  "esm": {
-    "mode": "auto",
-    "cjs": true
+    "jest": "24.5.0",
+    "jest-dom": "3.1.3",
+    "next-offline": "3.3.6",
+    "prettier": "1.16.4",
+    "react-testing-library": "6.0.0",
+    "typescript": "3.3.3333"
   }
 }
