--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "is-absolute-url": "2.1.0",
     "isomorphic-path": "2.0.1",
     "mime": "2.4.0",
-    "next": "8.0.3",
-    "next-server": "8.0.3",
+    "next": "8.0.4-canary.11",
+    "next-server": "8.0.4-canary.11",
     "object-fit-images": "3.2.4",
     "polished": "3.0.3",
     "prop-types": "15.7.2",
     "raven-js": "3.27.0",
-    "react": "16.8.4",
-    "react-dom": "16.8.4",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "styled-components": "4.1.3"
   },
   "devDependencies": {
