--- a/now.json
+++ b/now.json
@@ -1,17 +1,14 @@
 {
   "name": "mcan.sh",
   "version": 2,
-  "alias": [
-    "mcansh.now.sh",
-    "loganmcansh.com"
-  ],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@now/static-build"
-    }
-  ],
   "routes": [
+    {
+      "src": "/blog",
+      "status": 301,
+      "headers": {
+        "Location": "https://mcansh.blog"
+      }
+    },
     {
       "src": "/_next(/static/(?:[^/]+/pages|chunks|runtime)/.+)",
       "headers": {
