--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint": "6.5.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-kentcdodds": "14.4.1",
-    "eslint-config-mcansh": "2.1.1",
+    "eslint-config-mcansh": "2.2.0-canary.0",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
     "eslint-import-resolver-typescript": "1.1.1",
     "eslint-plugin-import": "2.18.2",
