--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mcansh/custom-next-link": "0.1.0",
+    "framer-motion": "1.6.8",
     "next": "9.0.7",
     "polished": "3.4.1",
     "react": "16.10.2",
