--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@mcansh/custom-next-link": "0.1.0",
     "framer-motion": "1.6.8",
-    "next": "9.0.7",
+    "next": "9.0.9-canary.1",
     "polished": "3.4.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
@@ -38,14 +38,14 @@
     "babel-plugin-styled-components": "1.10.6",
     "eslint": "6.5.1",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-config-kentcdodds": "14.4.1",
+    "eslint-config-kentcdodds": "14.5.0",
     "eslint-config-mcansh": "2.2.0-canary.0",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
     "eslint-import-resolver-typescript": "1.1.1",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.15.1",
+    "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
     "husky": "3.0.8",
     "lint-staged": "9.4.1",
