chore(deps): bump to latest
publicDirectory is no longer an experiment

Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@mcansh/custom-next-link": "0.1.0",
     "framer-motion": "1.6.8",
-    "next": "9.0.9-canary.1",
+    "next": "9.1.0",
     "polished": "3.4.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
@@ -31,8 +31,8 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/styled-components": "4.1.19",
-    "@typescript-eslint/eslint-plugin": "2.3.2",
-    "@typescript-eslint/parser": "2.3.2",
+    "@typescript-eslint/eslint-plugin": "2.3.3",
+    "@typescript-eslint/parser": "2.3.3",
     "babel-plugin-polished": "1.1.0",
     "babel-plugin-root-import": "6.4.1",
     "babel-plugin-styled-components": "1.10.6",
