--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "homepage": "https://mcan.sh",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
-  "prettier": "eslint-config-mcansh/prettier.config.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -17,40 +16,41 @@
     "validate": "yarn lint && yarn format && yarn type-check"
   },
   "dependencies": {
-    "@mcansh/custom-next-link": "0.1.0",
-    "framer-motion": "1.6.8",
-    "next": "9.1.0",
-    "polished": "3.4.1",
-    "react": "16.10.2",
-    "react-dom": "16.10.2",
-    "react-simple-img": "2.3.6",
-    "styled-components": "4.4.0"
+    "@mcansh/custom-next-link": "0.3.2",
+    "framer-motion": "1.6.15",
+    "next": "9.1.4",
+    "polished": "3.4.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-simple-img": "2.3.7",
+    "styled-components": "4.4.1"
   },
   "devDependencies": {
-    "@types/node": "12.7.11",
-    "@types/react": "16.9.5",
-    "@types/react-dom": "16.9.1",
-    "@types/styled-components": "4.1.19",
-    "@typescript-eslint/eslint-plugin": "2.3.3",
-    "@typescript-eslint/parser": "2.3.3",
+    "@mcansh/eslint-config": "2.3.1-canary.0",
+    "@types/node": "12.12.11",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
+    "@types/styled-components": "4.4.0",
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/parser": "2.8.0",
     "babel-plugin-polished": "1.1.0",
     "babel-plugin-root-import": "6.4.1",
     "babel-plugin-styled-components": "1.10.6",
-    "eslint": "6.5.1",
+    "eslint": "6.6.0",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-config-kentcdodds": "14.5.0",
-    "eslint-config-mcansh": "2.2.0-canary.0",
+    "eslint-config-kentcdodds": "14.6.1",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
-    "eslint-import-resolver-typescript": "1.1.1",
+    "eslint-import-resolver-typescript": "2.0.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.1.2",
-    "husky": "3.0.8",
-    "lint-staged": "9.4.1",
-    "prettier": "1.18.2",
-    "typescript": "3.7.0-beta"
+    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.8.0",
+    "husky": "3.1.0",
+    "lint-staged": "9.4.3",
+    "prettier": "1.19.1",
+    "typescript": "3.7.2"
   },
   "husky": {
     "hooks": {
