--- a/now.json
+++ b/now.json
@@ -3,15 +3,7 @@
   "version": 2,
   "build": {
     "env": {
-      "NPM_TOKEN": "@blog_github_token"
+      "NPM_RC": "@npmrc"
     }
   },
-  "routes": [
-    {
-      "src": "/_next(/static/(?:[^/]+/pages|chunks|runtime)/.+)",
-      "headers": {
-        "Cache-Control": "max-age=31536000, immutable"
-      }
-    }
-  ]
 }
