--- a/package.json
+++ b/package.json
@@ -17,42 +17,40 @@
   },
   "dependencies": {
     "@mcansh/custom-next-link": "0.3.2",
-    "framer-motion": "1.6.15",
-    "next": "9.1.4",
-    "polished": "3.4.2",
-    "react": "16.12.0",
-    "react-div-100vh": "0.3.4",
-    "react-dom": "16.12.0",
-    "react-simple-img": "2.3.7",
-    "styled-components": "4.4.1"
+    "framer-motion": "1.9.1",
+    "next": "9.3.0",
+    "polished": "3.4.4",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "react-simple-img": "2.3.9",
+    "styled-components": "5.0.1"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "2.3.1-canary.0",
-    "@types/node": "12.12.11",
-    "@types/react": "16.9.11",
-    "@types/react-div-100vh": "0.3.0",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "4.4.0",
-    "@typescript-eslint/eslint-plugin": "2.8.0",
-    "@typescript-eslint/parser": "2.8.0",
+    "@mcansh/eslint-config": "2.6.1",
+    "@types/node": "13.9.1",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
+    "@types/styled-components": "5.0.1",
+    "@typescript-eslint/eslint-plugin": "2.23.0",
+    "@typescript-eslint/parser": "2.23.0",
     "babel-plugin-polished": "1.1.0",
     "babel-plugin-root-import": "6.4.1",
-    "babel-plugin-styled-components": "1.10.6",
-    "eslint": "6.6.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-kentcdodds": "14.6.1",
+    "babel-plugin-styled-components": "1.10.7",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-kentcdodds": "14.8.0",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
     "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.8.0",
-    "husky": "3.1.0",
-    "lint-staged": "9.4.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.10.0",
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
     "prettier": "1.19.1",
-    "typescript": "3.7.2"
+    "typescript": "3.8.3"
   },
   "husky": {
     "hooks": {
@@ -63,12 +61,10 @@
     "*.+(js|jsx|ts|tsx)": [
       "sh scripts/ts-precommit.bash",
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.+(json|yml|yaml|css|less|scss|md|graphql|mdx)": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
