--- a/package.json
+++ b/package.json
@@ -17,42 +17,44 @@
   },
   "dependencies": {
     "@mcansh/custom-next-link": "0.3.2",
-    "framer-motion": "1.6.15",
-    "next": "9.1.4",
-    "polished": "3.4.2",
-    "react": "16.12.0",
-    "react-div-100vh": "0.3.4",
-    "react-dom": "16.12.0",
-    "react-simple-img": "2.3.7",
-    "styled-components": "4.4.1"
+    "fathom-client": "2.0.3",
+    "framer-motion": "1.10.3",
+    "next": "9.3.5",
+    "polished": "3.5.1",
+    "react": "16.13.1",
+    "react-div-100vh": "0.3.8",
+    "react-dom": "16.13.1",
+    "react-simple-img": "2.3.9",
+    "styled-components": "5.1.0"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "2.3.1-canary.0",
-    "@types/node": "12.12.11",
-    "@types/react": "16.9.11",
+    "@mcansh/eslint-config": "2.6.1",
+    "@types/node": "13.11.1",
+    "@types/react": "16.9.34",
     "@types/react-div-100vh": "0.3.0",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "4.4.0",
-    "@typescript-eslint/eslint-plugin": "2.8.0",
-    "@typescript-eslint/parser": "2.8.0",
+    "@types/react-dom": "16.9.6",
+    "@types/styled-components": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "2.28.0",
+    "@typescript-eslint/parser": "2.28.0",
     "babel-plugin-polished": "1.1.0",
-    "babel-plugin-root-import": "6.4.1",
-    "babel-plugin-styled-components": "1.10.6",
-    "eslint": "6.6.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-kentcdodds": "14.6.1",
+    "babel-plugin-root-import": "6.5.0",
+    "babel-plugin-styled-components": "1.10.7",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-kentcdodds": "14.8.1",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
     "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.8.0",
-    "husky": "3.1.0",
-    "lint-staged": "9.4.3",
-    "prettier": "1.19.1",
-    "typescript": "3.7.2"
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.10.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.1.3",
+    "prettier": "2.0.4",
+    "typescript": "3.8.3"
   },
   "husky": {
     "hooks": {
