--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fathom-client": "2.0.3",
     "framer-motion": "1.10.3",
     "next": "9.3.6",
-    "polished": "3.6.1",
+    "polished": "3.6.2",
     "react": "16.13.1",
     "react-div-100vh": "0.3.8",
     "react-dom": "16.13.1",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@mcansh/eslint-config": "2.6.1",
+    "@svgr/webpack": "5.4.0",
     "@types/node": "13.13.5",
     "@types/react": "16.9.34",
     "@types/react-div-100vh": "0.3.0",
