--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "@mcansh/custom-next-link": "0.3.2",
-    "fathom-client": "2.0.3",
     "framer-motion": "1.10.3",
     "next": "9.3.6",
     "polished": "3.6.2",
@@ -40,7 +39,7 @@
     "babel-plugin-polished": "1.1.0",
     "babel-plugin-root-import": "6.5.0",
     "babel-plugin-styled-components": "1.10.7",
-    "eslint": "6.8.0",
+    "eslint": "7.0.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-kentcdodds": "14.11.0",
     "eslint-import-resolver-babel-plugin-root-import": "1.1.1",
@@ -66,12 +65,10 @@
     "*.+(js|jsx|ts|tsx)": [
       "sh scripts/ts-precommit.bash",
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.+(json|yml|yaml|css|less|scss|md|graphql|mdx)": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
