--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 save-exact=true
 tag-version-prefix=""
-"@mcansh:registry"="https://npm.pkg.github.com"
+"@mcansh:registry"="https://registry.npmjs.org"
