--- a/package.json
+++ b/package.json
@@ -17,40 +17,38 @@
   },
   "dependencies": {
     "@mcansh/custom-next-link": "0.3.2",
-    "framer-motion": "2.9.1",
-    "next": "9.5.5",
-    "polished": "4.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-simple-img": "2.3.9",
-    "styled-components": "5.2.0"
+    "framer-motion": "3.2.1",
+    "next": "10.0.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "type-fest": "0.20.2"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "2.8.0",
-    "@svgr/webpack": "5.4.0",
-    "@types/node": "14.11.8",
-    "@types/react": "16.9.52",
-    "@types/react-dom": "16.9.8",
-    "@types/styled-components": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.4.1",
-    "babel-plugin-polished": "1.1.0",
-    "babel-plugin-styled-components": "1.11.1",
-    "eslint": "7.11.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-kentcdodds": "16.1.0",
+    "@mcansh/eslint-config": "3.0.1",
+    "@svgr/webpack": "5.5.0",
+    "@types/node": "14.14.22",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "4.14.1",
+    "@typescript-eslint/parser": "4.14.1",
+    "autoprefixer": "10.2.3",
+    "eslint": "7.18.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-kentcdodds": "17.3.2",
     "eslint-import-resolver-typescript": "2.3.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.4",
-    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.10.0",
-    "husky": "4.3.0",
-    "lint-staged": "10.4.0",
-    "prettier": "2.1.2",
-    "typescript": "4.0.3"
+    "husky": "4.3.8",
+    "lint-staged": "10.5.3",
+    "postcss": "8.2.4",
+    "prettier": "2.2.1",
+    "tailwindcss": "2.0.2",
+    "typescript": "4.1.3"
   },
   "husky": {
     "hooks": {
