--- a/package.json
+++ b/package.json
@@ -6,58 +6,57 @@
   "homepage": "https://mcan.sh",
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
+  "sideEffects": false,
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
+    "dev": "pm2-dev pm2.config.js",
+    "clean": "del .cache app/styles server/build public/build",
+    "prebuild": "npm run clean",
+    "build": "run-s build:*",
+    "build:remix": "remix build",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
+    "start": "vercel dev",
     "type-check": "tsc",
     "lint": "eslint . --ext \".js,.ts,.tsx\"",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
-    "validate": "yarn lint && yarn format && yarn type-check"
+    "validate": "yarn lint && yarn format && yarn type-check",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@mcansh/custom-next-link": "0.3.2",
-    "framer-motion": "3.2.1",
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "type-fest": "0.20.2"
+    "@remix-run/node": "0.17.0",
+    "@remix-run/react": "0.17.0",
+    "@remix-run/vercel": "0.17.0",
+    "fathom-client": "3.0.0",
+    "framer-motion": "4.1.13",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
+    "remix": "0.17.0",
+    "type-fest": "1.1.1"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.0.1",
-    "@svgr/webpack": "5.5.0",
-    "@types/node": "14.14.22",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.14.1",
-    "@typescript-eslint/parser": "4.14.1",
-    "autoprefixer": "10.2.3",
-    "eslint": "7.18.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-kentcdodds": "17.3.2",
-    "eslint-import-resolver-typescript": "2.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.10.0",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.3",
-    "postcss": "8.2.4",
-    "prettier": "2.2.1",
-    "tailwindcss": "2.0.2",
-    "typescript": "4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "@remix-run/dev": "0.17.0",
+    "@types/node": "15.0.2",
+    "@types/react": "17.0.5",
+    "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
+    "autoprefixer": "10.2.5",
+    "del-cli": "3.0.1",
+    "eslint": "7.26.0",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
+    "npm-run-all": "4.1.5",
+    "pm2": "4.5.6",
+    "postcss": "8.2.15",
+    "postcss-cli": "8.3.1",
+    "prettier": "2.3.0",
+    "tailwindcss": "2.1.2",
+    "typescript": "4.2.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
-      "sh scripts/ts-precommit.bash",
       "prettier --write",
       "eslint --fix"
     ],
