--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "remix": "0.17.0",
+    "remix-utils": "1.0.2",
     "type-fest": "1.1.1"
   },
   "devDependencies": {
@@ -39,10 +40,11 @@
     "@remix-run/dev": "0.17.0",
     "@types/node": "15.0.2",
     "@types/react": "17.0.5",
-    "@types/react-dom": "17.0.3",
+    "@types/react-dom": "17.0.4",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "autoprefixer": "10.2.5",
+    "cssnano": "5.0.2",
     "del-cli": "3.0.1",
     "eslint": "7.26.0",
     "husky": "6.0.0",
