--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "$schema": "https://raw.githubusercontent.com/ph1p/zeit-co-vscode-schemas/master/schemas/vercel.json",
+  "github": {
+    "enabled": false
+  },
   "builds": [
     {
       "src": "public/**/*",
