--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,6 +7,9 @@
     "target": "ES2019",
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true
   }
 }
