--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
   "sideEffects": false,
+  "main": "remix.config.js",
   "scripts": {
     "dev": "pm2-dev pm2.config.js",
     "clean": "del .cache app/styles server/build public/build",
@@ -22,35 +23,35 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@remix-run/node": "0.17.2",
-    "@remix-run/react": "0.17.2",
-    "@remix-run/vercel": "0.17.2",
+    "@remix-run/node": "0.17.5",
+    "@remix-run/react": "0.17.5",
+    "@remix-run/vercel": "0.17.5",
     "fathom-client": "3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "remix": "0.17.2",
+    "remix": "0.17.5",
     "remix-utils": "1.0.2",
-    "type-fest": "1.1.1"
+    "type-fest": "1.1.3"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "3.0.1",
-    "@remix-run/dev": "0.17.2",
-    "@types/node": "15.0.3",
-    "@types/react": "17.0.5",
+    "@mcansh/eslint-config": "3.1.0",
+    "@remix-run/dev": "0.17.5",
+    "@types/node": "15.6.1",
+    "@types/react": "17.0.8",
     "@types/react-dom": "17.0.5",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
-    "autoprefixer": "10.2.5",
-    "cssnano": "5.0.2",
+    "@typescript-eslint/eslint-plugin": "4.25.0",
+    "@typescript-eslint/parser": "4.25.0",
+    "autoprefixer": "10.2.6",
+    "cssnano": "5.0.4",
     "del-cli": "3.0.1",
-    "eslint": "7.26.0",
+    "eslint": "7.27.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
     "pm2": "4.5.6",
-    "postcss": "8.2.15",
+    "postcss": "8.3.0",
     "postcss-cli": "8.3.1",
     "prettier": "2.3.0",
     "tailwindcss": "2.1.2",
