chore(deps): bump to latest, react 18 :ghost:
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,6 +10,7 @@
     "noEmit": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["react/next", "react-dom/next"]
   }
 }
