--- a/package.json
+++ b/package.json
@@ -27,35 +27,35 @@
     "@remix-run/react": "0.17.5",
     "@remix-run/vercel": "0.17.5",
     "fathom-client": "3.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0-alpha-01be61c12",
+    "react-dom": "18.0.0-alpha-01be61c12",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "remix": "0.17.5",
     "remix-utils": "1.0.2",
-    "type-fest": "1.1.3"
+    "type-fest": "1.2.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.1.0",
     "@remix-run/dev": "0.17.5",
-    "@types/node": "15.6.1",
-    "@types/react": "17.0.8",
-    "@types/react-dom": "17.0.5",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
+    "@types/node": "15.12.2",
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.7",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
     "autoprefixer": "10.2.6",
-    "cssnano": "5.0.4",
+    "cssnano": "5.0.6",
     "del-cli": "3.0.1",
-    "eslint": "7.27.0",
+    "eslint": "7.28.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
-    "pm2": "4.5.6",
-    "postcss": "8.3.0",
+    "pm2": "5.1.0",
+    "postcss": "8.3.4",
     "postcss-cli": "8.3.1",
-    "prettier": "2.3.0",
-    "tailwindcss": "2.1.2",
-    "typescript": "4.2.4"
+    "prettier": "2.3.1",
+    "tailwindcss": "2.1.4",
+    "typescript": "4.3.2"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
