--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "npm-run-all": "4.1.5",
     "pm2": "4.5.6",
     "postcss": "8.3.0",
+    "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "8.3.1",
     "prettier": "2.3.0",
     "tailwindcss": "2.1.2",
+    "tailwindcss-padding-safe": "1.0.5",
     "typescript": "4.2.4"
   },
   "lint-staged": {
