--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@remix-run/react": "0.17.5",
     "@remix-run/vercel": "0.17.5",
     "fathom-client": "3.0.0",
-    "react": "18.0.0-alpha-01be61c12",
-    "react-dom": "18.0.0-alpha-01be61c12",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react": "18.0.0-alpha-1a106bdc2",
+    "react-dom": "18.0.0-alpha-1a106bdc2",
+    "react-router": "6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.0",
     "remix": "0.17.5",
     "remix-utils": "1.0.2",
     "type-fest": "1.2.0"
@@ -52,9 +52,11 @@
     "npm-run-all": "4.1.5",
     "pm2": "5.1.0",
     "postcss": "8.3.4",
+    "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "8.3.1",
     "prettier": "2.3.1",
     "tailwindcss": "2.1.4",
+    "tailwindcss-padding-safe": "1.0.5",
     "typescript": "4.3.2"
   },
   "lint-staged": {
