--- a/package.json
+++ b/package.json
@@ -33,31 +33,32 @@
     "react-router-dom": "6.0.0-beta.0",
     "remix": "0.17.5",
     "remix-utils": "1.0.2",
-    "type-fest": "1.2.0"
+    "type-fest": "1.2.1"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "3.1.0",
     "@remix-run/dev": "0.17.5",
-    "@types/node": "15.12.2",
+    "@types/node": "15.12.4",
     "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.7",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
+    "@types/react-dom": "17.0.8",
+    "@types/web": "0.0.1",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
     "autoprefixer": "10.2.6",
     "cssnano": "5.0.6",
-    "del-cli": "3.0.1",
-    "eslint": "7.28.0",
+    "del-cli": "4.0.0",
+    "eslint": "7.29.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
     "pm2": "5.1.0",
-    "postcss": "8.3.4",
+    "postcss": "8.3.5",
     "postcss-100vh-fix": "1.0.2",
     "postcss-cli": "8.3.1",
-    "prettier": "2.3.1",
-    "tailwindcss": "2.1.4",
+    "prettier": "2.3.2",
+    "tailwindcss": "2.2.4",
     "tailwindcss-padding-safe": "1.0.5",
-    "typescript": "4.3.2"
+    "typescript": "4.3.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
