chore: update how react/next & react-dom/next types are referenced
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,7 +10,6 @@
     "noEmit": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": ["react/next", "react-dom/next"]
+    "noFallthroughCasesInSwitch": true
   }
 }
