--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@remix-run/react": "0.17.5",
     "@remix-run/vercel": "0.17.5",
     "fathom-client": "3.0.0",
-    "react": "18.0.0-alpha-1a106bdc2",
-    "react-dom": "18.0.0-alpha-1a106bdc2",
+    "react": "18.0.0-alpha-73ffce1b6-20210624",
+    "react-dom": "18.0.0-alpha-73ffce1b6-20210624",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "remix": "0.17.5",
