feat: add a service worker
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@ node_modules
 /.cache
 /server/build
 /public/build
-
+/public/sw.js
+/public/sw.js.map
+/public/workbox-*.js
+/public/workbox-*.js.map
 app/styles
