chore: use remix-secure-headers for headers
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "lint": "eslint --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
     "validate": "run-p lint format type-check",
-    "prepare": "husky install",
-    "postinstall": "remix setup node"
+    "prepare": "husky install && remix setup node"
   },
   "dependencies": {
+    "@mcansh/remix-secure-headers": "0.3.0",
     "@remix-run/node": "1.2.3",
     "@remix-run/react": "1.2.3",
     "@remix-run/server-runtime": "1.2.3",
