chore(deps): bump to latest
- adds baseUrl to tsconfig
- updates exports in root.tsx
- few minute details in entry.server.tsx

Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noFallthroughCasesInSwitch": true,
     "incremental": true,
     "allowJs": true,
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
     }
