--- a/package.json
+++ b/package.json
@@ -23,41 +23,41 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.6.6-pre.0",
-    "@remix-run/react": "1.6.6-pre.0",
-    "@remix-run/vercel": "1.6.6-pre.0",
-    "clsx": "1.1.1",
+    "@remix-run/node": "1.6.7",
+    "@remix-run/react": "1.6.7",
+    "@remix-run/vercel": "1.6.7",
+    "clsx": "1.2.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
     "isbot": "3.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "type-fest": "2.14.0"
+    "type-fest": "2.18.0"
   },
   "devDependencies": {
     "@mcansh/eslint-config": "4.0.0",
-    "@remix-run/dev": "1.6.6-pre.0",
-    "@remix-run/serve": "1.6.6-pre.0",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@types/web": "0.0.68",
-    "@typescript-eslint/eslint-plugin": "5.30.0",
-    "@typescript-eslint/parser": "5.30.0",
-    "autoprefixer": "10.4.7",
+    "@remix-run/dev": "1.6.7",
+    "@remix-run/serve": "1.6.7",
+    "@types/node": "18.6.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@types/web": "0.0.70",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
+    "autoprefixer": "10.4.8",
     "cssnano": "5.1.12",
-    "del-cli": "4.0.1",
-    "eslint": "8.18.0",
+    "del-cli": "5.0.0",
+    "eslint": "8.21.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
     "pm2": "5.2.0",
     "postcss": "8.4.14",
     "postcss-100vh-fix": "1.0.2",
-    "postcss-cli": "9.1.0",
+    "postcss-cli": "10.0.0",
     "prettier": "2.7.1",
-    "tailwindcss": "3.1.4",
-    "tailwindcss-padding-safe": "1.0.5",
+    "tailwindcss": "3.1.7",
+    "tailwindcss-padding-safe": "1.0.6",
     "typescript": "4.7.4"
   },
   "lint-staged": {
