chore(deps): bump to latest, switch to pnpm
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -23,31 +23,33 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "1.6.8",
-    "@remix-run/react": "1.6.8",
-    "@remix-run/vercel": "1.6.8",
+    "@remix-run/node": "1.7.0",
+    "@remix-run/react": "1.7.0",
+    "@remix-run/vercel": "1.7.0",
+    "@vercel/node": "2.5.12",
     "clsx": "1.2.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
-    "isbot": "3.5.0",
+    "isbot": "3.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "type-fest": "2.18.0"
+    "type-fest": "2.19.0"
   },
   "devDependencies": {
-    "@mcansh/eslint-config": "5.0.0",
-    "@remix-run/dev": "1.6.8",
-    "@remix-run/serve": "1.6.8",
-    "@types/node": "18.7.2",
-    "@types/react": "18.0.17",
+    "@babel/core": "7.18.13",
+    "@mcansh/eslint-config": "4.0.0",
+    "@remix-run/dev": "1.7.0",
+    "@remix-run/serve": "1.7.0",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
-    "@types/web": "0.0.71",
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
+    "@types/web": "0.0.72",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "autoprefixer": "10.4.8",
-    "cssnano": "5.1.12",
+    "cssnano": "5.1.13",
     "del-cli": "5.0.0",
-    "eslint": "8.21.0",
+    "eslint": "8.23.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
@@ -58,7 +60,7 @@
     "prettier": "2.7.1",
     "tailwindcss": "3.1.8",
     "tailwindcss-padding-safe": "1.0.6",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
