--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "start": "pm2-dev pm2.config.js",
-    "dev": "remix dev",
-    "clean": "del .cache app/styles api/_build public/build",
+    "clean": "del .cache app/styles/app.css api public/build",
+    "predev": "npm run clean",
+    "dev": "run-p dev:*",
+    "dev:css": "tailwindcss -o app/styles/app.css --watch --postcss",
+    "dev:remix": "remix dev",
     "prebuild": "run-s clean type-check",
     "build": "run-s build:*",
-    "build:css": "postcss styles --base styles --dir app/styles --env production",
+    "build:css": "tailwindcss -o app/styles/app.css --minify --postcss",
     "build:remix": "remix build",
     "type-check": "tsc",
     "lint": "eslint --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
@@ -46,17 +48,14 @@
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "autoprefixer": "10.4.12",
-    "cssnano": "5.1.13",
     "del-cli": "5.0.0",
     "eslint": "8.26.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
-    "pm2": "5.2.2",
     "postcss": "8.4.18",
     "postcss-100vh-fix": "1.0.2",
-    "postcss-cli": "10.0.0",
     "prettier": "2.7.1",
     "tailwindcss": "3.2.1",
     "tailwindcss-padding-safe": "1.0.6",
