chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "sideEffects": false,
   "scripts": {
     "clean": "del .cache app/styles/app.css api public/build",
-    "predev": "npm run clean",
-    "dev": "run-p dev:*",
+    "dev": "npm run clean && run-p dev:*",
     "dev:css": "tailwindcss -o app/styles/app.css --watch --postcss",
     "dev:remix": "remix dev",
-    "prebuild": "run-s clean type-check",
-    "build": "run-s build:*",
+    "build": "run-s clean type-check && run-s build:*",
     "build:css": "tailwindcss -o app/styles/app.css --minify --postcss",
     "build:remix": "remix build",
     "type-check": "tsc",
@@ -25,41 +23,40 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "0.0.0-experimental-5b4bceda6",
-    "@remix-run/react": "0.0.0-experimental-5b4bceda6",
-    "@remix-run/vercel": "0.0.0-experimental-5b4bceda6",
-    "@vercel/node": "2.5.26",
+    "@remix-run/node": "0.0.0-experimental-a547b878b",
+    "@remix-run/react": "0.0.0-experimental-a547b878b",
+    "@remix-run/vercel": "0.0.0-experimental-a547b878b",
+    "@vercel/node": "2.6.3",
     "clsx": "1.2.1",
     "fathom-client": "3.5.0",
     "is-ci": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "type-fest": "3.1.0"
+    "type-fest": "3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.19.6",
-    "@remix-run/dev": "0.0.0-experimental-5b4bceda6",
-    "@remix-run/eslint-config": "0.0.0-experimental-5b4bceda6",
-    "@remix-run/serve": "0.0.0-experimental-5b4bceda6",
+    "@remix-run/dev": "0.0.0-experimental-a547b878b",
+    "@remix-run/eslint-config": "0.0.0-experimental-a547b878b",
+    "@remix-run/serve": "0.0.0-experimental-a547b878b",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "@types/web": "0.0.78",
-    "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/web": "0.0.79",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "autoprefixer": "10.4.13",
     "del-cli": "5.0.0",
-    "eslint": "8.26.0",
+    "eslint": "8.27.0",
     "eslint-plugin-prefer-let": "3.0.1",
-    "husky": "8.0.1",
+    "husky": "8.0.2",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.18",
+    "postcss": "8.4.19",
     "postcss-100vh-fix": "1.0.2",
     "prettier": "2.7.1",
-    "tailwindcss": "3.2.1",
+    "tailwindcss": "3.2.4",
     "tailwindcss-padding-safe": "1.0.6",
-    "typescript": "4.8.4"
+    "typescript": "4.9.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
