chore(deps): bump remix to 1.8.0-pre.0
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "0.6.2",
-    "@remix-run/node": "0.0.0-experimental-a547b878b",
-    "@remix-run/react": "0.0.0-experimental-a547b878b",
-    "@remix-run/vercel": "0.0.0-experimental-a547b878b",
+    "@remix-run/node": "1.8.0-pre.0",
+    "@remix-run/react": "1.8.0-pre.0",
+    "@remix-run/vercel": "1.8.0-pre.0",
     "@vercel/node": "2.6.3",
     "clsx": "1.2.1",
     "fathom-client": "3.5.0",
@@ -34,16 +34,16 @@
     "type-fest": "3.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-experimental-a547b878b",
-    "@remix-run/eslint-config": "0.0.0-experimental-a547b878b",
-    "@remix-run/serve": "0.0.0-experimental-a547b878b",
+    "@remix-run/dev": "1.8.0-pre.0",
+    "@remix-run/eslint-config": "1.8.0-pre.0",
+    "@remix-run/serve": "1.8.0-pre.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript/lib-dom": "npm:@types/web@0.0.79",
     "autoprefixer": "10.4.13",
     "del-cli": "5.0.0",
-    "eslint": "8.27.0",
+    "eslint": "8.28.0",
     "eslint-plugin-prefer-let": "3.0.1",
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
