chore: test sentry sourcemaps
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:remix": "remix dev",
     "build": "run-s clean type-check && run-s build:*",
     "build:css": "npm run css -- --minify",
-    "build:remix": "remix build",
+    "build:remix": "remix build --sourcemap && node ./scripts/postbuild.mjs",
     "css": "tailwindcss -o app/styles/app.css --postcss",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix .",
@@ -22,10 +22,11 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@remix-run/node": "1.12.0",
-    "@remix-run/react": "1.12.0",
-    "@remix-run/vercel": "1.12.0",
-    "@vercel/node": "^2.8.17",
+    "@remix-run/node": "^1.12.0",
+    "@remix-run/react": "^1.12.0",
+    "@remix-run/vercel": "^1.12.0",
+    "@sentry/remix": "^7.25.0",
+    "@vercel/node": "^2.9.2",
     "clsx": "^1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
@@ -34,14 +35,15 @@
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "type-fest": "^3.5.4"
+    "type-fest": "^3.5.7"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.12.0",
-    "@remix-run/eslint-config": "1.12.0",
-    "@remix-run/serve": "1.12.0",
+    "@remix-run/dev": "^1.12.0",
+    "@remix-run/eslint-config": "^1.12.0",
+    "@remix-run/serve": "^1.12.0",
+    "@sentry/cli": "^2.10.0",
     "@types/etag": "^1.8.1",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript/lib-dom": "npm:@types/web@^0.0.88",
@@ -50,15 +52,17 @@
     "eslint": "^8.33.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
+    "glob": "^8.0.3",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.1.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "tailwindcss": "^3.2.4",
+    "replace-in-file": "^6.3.5",
+    "tailwindcss": "^3.2.6",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "^4.9.5"
   },
