chore: add caret to versions
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -21,43 +21,43 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "@mcansh/remix-secure-headers": "0.6.2",
+    "@mcansh/remix-secure-headers": "^0.6.2",
     "@mcansh/tailwind-var": "^0.1.0",
     "@remix-run/node": "0.0.0-nightly-d9ecd5d-20230110",
     "@remix-run/react": "0.0.0-nightly-d9ecd5d-20230110",
     "@remix-run/vercel": "0.0.0-nightly-d9ecd5d-20230110",
-    "@vercel/node": "2.8.5",
-    "clsx": "1.2.1",
+    "@vercel/node": "^2.8.5",
+    "clsx": "^1.2.1",
     "etag": "^1.8.1",
-    "fathom-client": "3.5.0",
-    "is-ci": "3.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "type-fest": "3.5.1"
+    "fathom-client": "^3.5.0",
+    "is-ci": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "type-fest": "^3.5.1"
   },
   "devDependencies": {
     "@remix-run/dev": "0.0.0-nightly-d9ecd5d-20230110",
     "@remix-run/eslint-config": "0.0.0-nightly-d9ecd5d-20230110",
     "@remix-run/serve": "0.0.0-nightly-d9ecd5d-20230110",
     "@types/etag": "^1.8.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@typescript/lib-dom": "npm:@types/web@0.0.79",
-    "autoprefixer": "10.4.13",
-    "del": "7.0.0",
-    "eslint": "8.31.0",
-    "eslint-plugin-prefer-let": "3.0.1",
-    "husky": "8.0.3",
-    "lint-staged": "13.1.0",
-    "npm-run-all": "4.1.5",
-    "postcss": "8.4.21",
-    "postcss-100vh-fix": "1.0.2",
-    "prettier": "2.8.2",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.79",
+    "autoprefixer": "^10.4.13",
+    "del": "^7.0.0",
+    "eslint": "^8.31.0",
+    "eslint-plugin-prefer-let": "^3.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-100vh-fix": "^1.0.2",
+    "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "3.2.4",
-    "tailwindcss-padding-safe": "1.0.6",
-    "typescript": "4.9.4"
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-padding-safe": "^1.0.6",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
